--- a/packages/autorest.gotest/test/integrationtest/output/signalr/armsignalr/__debug/go-tester-pre.yaml
+++ b/packages/autorest.gotest/test/integrationtest/output/signalr/armsignalr/__debug/go-tester-pre.yaml
@@ -1804,7 +1804,7 @@ schemas:
         go:
           name: time.Time
           description: The timestamp of resource creation (UTC).
-          internalTimeType: timeRFC3339
+          internalTimeType: dateTimeRFC3339
       protocol: {}
     - &ref_60
       type: date-time
@@ -1818,7 +1818,7 @@ schemas:
         go:
           name: time.Time
           description: The timestamp of resource last modification (UTC)
-          internalTimeType: timeRFC3339
+          internalTimeType: dateTimeRFC3339
       protocol: {}
   objects:
     - &ref_175
@@ -18580,7 +18580,7 @@ language:
     description: ''
     azureARM: true
     containingModule: none
-    generateTimeRFC3339Helper: true
+    generateDateTimeRFC3339Helper: true
     groupParameters: true
     headAsBoolean: true
     module: github.com/Azure/azure-sdk-for-go/sdk/resourcemanager/signalr/armsignalr
