--- a/packages/autorest.gotest/test/integrationtest/output/appplatform/armappplatform/__debug/go-tester.yaml
+++ b/packages/autorest.gotest/test/integrationtest/output/appplatform/armappplatform/__debug/go-tester.yaml
@@ -2860,7 +2860,7 @@ schemas:
         go:
           name: time.Time
           description: Date time when the resource is created
-          internalTimeType: timeRFC3339
+          internalTimeType: dateTimeRFC3339
       protocol: {}
     - &ref_87
       type: date-time
@@ -2874,7 +2874,7 @@ schemas:
         go:
           name: time.Time
           description: Date time when the resource is created
-          internalTimeType: timeRFC3339
+          internalTimeType: dateTimeRFC3339
       protocol: {}
   objects:
     - &ref_3
@@ -45506,7 +45506,7 @@ language:
     description: ''
     azureARM: true
     containingModule: none
-    generateTimeRFC3339Helper: true
+    generateDateTimeRFC3339Helper: true
     groupParameters: true
     headAsBoolean: true
     module: github.com/Azure/azure-sdk-for-go/sdk/resourcemanager/appplatform/armappplatform/v2
