--- a/eng/pipelines/preview.yml
+++ b/eng/pipelines/preview.yml
@@ -25,7 +25,7 @@ resources:
       type: github
       endpoint: Azure
       name: Azure/azure-sdk-tools
-      ref: refs/heads/users/pahallis/cookiecutter
+      ref: refs/heads/main
 
 pool:
   name: azsdk-pool-mms-win-2022-general
