Update to latest versions of rush and pnpm
The scripts were automatically updated as part of this process.
Added versions to codegen.go and codemodel.go packages as the latest
tools require it.

--- a/packages/codemodel.go/package.json
+++ b/packages/codemodel.go/package.json
@@ -1,5 +1,6 @@
 {
     "name": "@azure-tools/codemodel.go",
+    "version": "0.1.0",
     "type": "module",
     "scripts": {
       "build": "tsc -p ."
