Update CI to latest versions of Go and golangci-lint
Add codegen.go and codemodel.go to the exclusions list for gotest as it
doesn't rely on them at present.

--- a/eng/pipelines/ci-gotest.yml
+++ b/eng/pipelines/ci-gotest.yml
@@ -8,6 +8,8 @@ trigger:
   paths:
     exclude:
       - packages/autorest.go
+      - packages/codegen.go
+      - packages/codemodel.go
       - packages/typespec-go
 
 pr:
@@ -20,6 +22,8 @@ pr:
   paths:
     exclude:
       - packages/autorest.go
+      - packages/codegen.go
+      - packages/codemodel.go
       - packages/typespec-go
 
 jobs:
@@ -28,9 +32,9 @@ jobs:
 
     strategy:
       matrix:
-        Linux_Go120:
+        Linux_Go121:
           vm.image: "ubuntu-22.04"
-          go.version: "1.20.3"
+          go.version: "1.21.4"
 
     pool:
       vmImage: "$(vm.image)"
