Update CI to latest versions of Go and golangci-lint (#1079)
* Update CI to latest versions of Go and golangci-lint

Add codegen.go and codemodel.go to the exclusions list for gotest as it
doesn't rely on them at present.

* fix copy/paste

--- a/eng/pipelines/ci-typespec.yml
+++ b/eng/pipelines/ci-typespec.yml
@@ -30,9 +30,9 @@ jobs:
 
     strategy:
       matrix:
-        Linux_Go120:
+        Linux_Go121:
           vm.image: "ubuntu-22.04"
-          go.version: "1.20.3"
+          go.version: "1.21.4
 
     pool:
       vmImage: "$(vm.image)"
@@ -43,4 +43,4 @@ jobs:
           NodeVersion: "18.x"
           GoVersion: "$(go.version)"
 
-      - template: ../steps/build-test-gotest.yaml
+      - template: ../steps/build-test-typespec.yaml
