--- a/eng/pipelines/ci-typespec.yml
+++ b/eng/pipelines/ci-typespec.yml
@@ -32,7 +32,7 @@ jobs:
       matrix:
         Linux_Go121:
           vm.image: "ubuntu-22.04"
-          go.version: "1.21.4
+          go.version: "1.21.4"
 
     pool:
       vmImage: "$(vm.image)"
