Enable pnpm workspaces in rushjs
This fixes a build issue in the TypeSpec branch when consuming a
dependency via a tarball for testing purposes.

--- a/packages/codegen.go/package.json
+++ b/packages/codegen.go/package.json
@@ -8,5 +8,8 @@
   "dependencies": {
     "@azure-tools/codegen": "~2.9.2",
     "@azure-tools/linq": "~3.1.0"
+  },
+  "devDependencies": {
+    "typescript": "~5.1.3"
   }
 }
