--- a/packages/codemodel.go/package.json
+++ b/packages/codemodel.go/package.json
@@ -4,5 +4,8 @@
     "type": "module",
     "scripts": {
       "build": "tsc -p ."
+    },
+    "devDependencies": {
+      "typescript": "~5.1.3"
     }
   }
