Get basic codegen for TypeSpec working
This should cover basic CRUD operations and supporting types. It does
not include support for LROs, pagination, and polymorphism.
The layout and flow is similar to the autorest version; the input is
adapted to the Go code model, fed to the code generator, and the results
written to disk.
There are chunks of commented out code and TODO comments where shortcuts
were taken (e.g. hard-coded values) to get things standing up.
Added "rush tspcompile" which is analogous to "rush regenerate" to
rebuild the world. The only difference is that the script will also mod
tidy after formatting.
The short names for rush script parameters have been removed as they
kept colliding with in-box machinery.
The TS CI has been updated to build/lint/run/publish results.
Centralized initialization of field arrays in the code model.
Added code model support for raw JSON as bytes and slice elements by val
configuration options.
Removed hard-coded pointer to time types in operation request/response
handlers; it now honors the user-specified setting.

--- a/packages/typespec-go/package.json
+++ b/packages/typespec-go/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "description": "TypeSpec emitter for Go SDKs",
   "type": "module",
-  "main": "dist/src/index.js",
+  "main": "dist/typespec-go/src/index.js",
   "exports": {
-    ".": "./dist/src/index.js"
+    ".": "./dist/typespec-go/src/index.js"
   },
-  "tspMain": "dist/src/index.js",
+  "tspMain": "dist/typespec-go/src/index.js",
   "directories": {
     "doc": "docs"
   },
@@ -47,6 +47,8 @@
   "homepage": "https://github.com/Azure/autorest.go#readme",
   "readme": "https://github.com/Azure/autorest.go/blob/main/readme.md",
   "devDependencies": {
+    "@azure-tools/cadl-ranch-expect": "~0.9.0",
+    "@azure-tools/cadl-ranch-specs": "~0.26.2",
     "@types/js-yaml": "~4.0.6",
     "@types/node": "^18.16.3",
     "@typescript-eslint/eslint-plugin": "~4.1.1",
@@ -58,14 +60,14 @@
     "typescript": "~5.1.3"
   },
   "dependencies": {
-    "@azure-tools/cadl-ranch-expect": "~0.7.0",
-    "@azure-tools/cadl-ranch-specs": "~0.22.0",
-    "@azure-tools/typespec-azure-core": ">=0.34.0 <1.0.0",
-    "@azure-tools/typespec-client-generator-core": ">=0.35.0-dev.3 <1.0.0",
-    "@typespec/compiler": ">=0.48.0 <1.0.0",
-    "@typespec/http": ">=0.48.0 <1.0.0",
-    "@typespec/rest": ">=0.48.0 <1.0.0",
-    "@typespec/versioning": ">=0.48.0 <1.0.0",
+    "@azure-tools/codegen": "~2.9.2",
+    "@azure-tools/linq": "~3.1.0",
+    "@azure-tools/typespec-azure-core": ">=0.36.0 <1.0.0",
+    "@azure-tools/typespec-client-generator-core": "https://artprodcus3.artifacts.visualstudio.com/A0fb41ef4-5012-48a9-bf39-4ee3de03ee35/29ec6040-b234-4e31-b139-33dc4287b756/_apis/artifact/cGlwZWxpbmVhcnRpZmFjdDovL2F6dXJlLXNkay9wcm9qZWN0SWQvMjllYzYwNDAtYjIzNC00ZTMxLWIxMzktMzNkYzQyODdiNzU2L2J1aWxkSWQvMzI5ODA4Ny9hcnRpZmFjdE5hbWUvcGFja2FnZXM1/content?format=file&subPath=%2Fazure-tools-typespec-client-generator-core-0.37.0-pr-3343.20231128.14.tgz",
+    "@typespec/compiler": ">=0.50.0 <1.0.0",
+    "@typespec/http": ">=0.50.0 <1.0.0",
+    "@typespec/rest": ">=0.50.0 <1.0.0",
+    "@typespec/versioning": ">=0.50.0 <1.0.0",
     "js-yaml": "~4.1.0"
   }
 }
