add missing terminal quote
enable verbose flag for tspcompile

--- a/eng/steps/build-test-typespec.yaml
+++ b/eng/steps/build-test-typespec.yaml
@@ -19,7 +19,7 @@ steps:
     workingDirectory: $(System.DefaultWorkingDirectory)/packages/typespec-go
 
   - script: |
-      rush tspcompile
+      rush tspcompile --verbose
       git add -A ./test/.
       git diff --staged -w 1>&2
     displayName: "Regenerate Cadl Tests"
