exclude naming.go from autorest.gotest CI

--- a/eng/pipelines/ci-gotest.yml
+++ b/eng/pipelines/ci-gotest.yml
@@ -10,6 +10,7 @@ trigger:
       - packages/autorest.go
       - packages/codegen.go
       - packages/codemodel.go
+      - packages/naming.go
       - packages/typespec-go
 
 pr:
@@ -24,6 +25,7 @@ pr:
       - packages/autorest.go
       - packages/codegen.go
       - packages/codemodel.go
+      - packages/naming.go
       - packages/typespec-go
 
 jobs:
