--- a/packages/typespec-go/package.json
+++ b/packages/typespec-go/package.json
@@ -61,6 +61,8 @@
   },
   "dependencies": {
     "@azure-tools/codegen": "~2.9.2",
+    "@azure-tools/codegen.go": "workspace:*",
+    "@azure-tools/naming.go": "workspace:*",
     "@azure-tools/linq": "~3.1.0",
     "@azure-tools/typespec-azure-core": ">=0.36.0 <1.0.0",
     "@azure-tools/typespec-client-generator-core": "https://artprodcus3.artifacts.visualstudio.com/A0fb41ef4-5012-48a9-bf39-4ee3de03ee35/29ec6040-b234-4e31-b139-33dc4287b756/_apis/artifact/cGlwZWxpbmVhcnRpZmFjdDovL2F6dXJlLXNkay9wcm9qZWN0SWQvMjllYzYwNDAtYjIzNC00ZTMxLWIxMzktMzNkYzQyODdiNzU2L2J1aWxkSWQvMzI5ODA4Ny9hcnRpZmFjdE5hbWUvcGFja2FnZXM1/content?format=file&subPath=%2Fazure-tools-typespec-client-generator-core-0.37.0-pr-3343.20231128.14.tgz",
