Add support for discriminated type
Moving naming of the discriminator interface to the naming package.
Fixed another case of "no undefined arrays", make it empty.
Added source map support to typespec-go for better stacks on error.
Substitution of the interface type for discriminators has been merged
into getPossibleType.
Extended getLiteralValue to handle enum value literals and other types.
Removed validation of overlapping fields with different types as the
TypeSpec compiler does this for us.

--- a/packages/typespec-go/package.json
+++ b/packages/typespec-go/package.json
@@ -70,6 +70,7 @@
     "@typespec/http": ">=0.50.0 <1.0.0",
     "@typespec/rest": ">=0.50.0 <1.0.0",
     "@typespec/versioning": ">=0.50.0 <1.0.0",
-    "js-yaml": "~4.1.0"
+    "js-yaml": "~4.1.0",
+    "source-map-support": "0.5.21"
   }
 }
