Consolidate custom command scripts
The modtidy and buildvet scripts are now project agnostic.
Consolidated copies of semaphore.js, reverting it to its CommonJS
format from commit history.

--- a/eng/steps/build-test-go.yaml
+++ b/eng/steps/build-test-go.yaml
@@ -19,7 +19,7 @@ steps:
       git add -A ./test/.
       git diff --staged -w 1>&2
     displayName: "Regenerate Autorest Tests"
-    workingDirectory: $(System.DefaultWorkingDirectory)/packages/autorest.go
+    workingDirectory: $(System.DefaultWorkingDirectory)/packages/autorest.go/test
     failOnStderr: true
 
   - script: |
