--- a/eng/steps/build-test-go.yaml
+++ b/eng/steps/build-test-go.yaml
@@ -16,7 +16,7 @@ steps:
   - script: |
       rush regenerate
       rush modtidy 2>&1
-      git add -A ./test/.
+      git add -A .
       git diff --staged -w 1>&2
     displayName: "Regenerate Autorest Tests"
     workingDirectory: $(System.DefaultWorkingDirectory)/packages/autorest.go/test
