--- a/eng/steps/build-test-typespec.yaml
+++ b/eng/steps/build-test-typespec.yaml
@@ -20,27 +20,12 @@ steps:
 
   - script: |
       rush tspcompile --verbose
-      git add -A ./test/.
+      rush modtidy 2>&1
+      git add -A .
       git diff --staged -w 1>&2
     displayName: "Regenerate Cadl Tests"
-    workingDirectory: $(System.DefaultWorkingDirectory)/packages/typespec-go
+    workingDirectory: $(System.DefaultWorkingDirectory)/packages/typespec-go/test
     failOnStderr: true
-
-  - pwsh: |
-      $modDirs = (./eng/scripts/get_module_dirs.ps1 -serviceDir ${{ parameters.GoTestPath }})
-      $exit = 0
-      foreach ($md in $modDirs) {
-        pushd $md
-        Write-Host "##[command]Executing go mod tidy in $md"
-        go mod tidy
-        $diff = (git diff -w .)
-        write-host ($diff -join "`n")
-        if ($diff.Length -gt 0) {
-          $exit = 1
-        }
-      }
-      exit $exit
-    displayName: "Mod Tidy"
 
   - script: |
       set -e
