Consolidate custom command scripts (#1105)
* Consolidate custom command scripts

The modtidy and buildvet scripts are now project agnostic.
Consolidated copies of semaphore.js, reverting it to its CommonJS
format from commit history.

* fix relative path

update tsp CI to use rush modtidy

* update baseline files due to c458fe83885b1edf8a1f237b9d4d8ed737df538d

--- a/eng/steps/build-test-go.yaml
+++ b/eng/steps/build-test-go.yaml
@@ -16,10 +16,10 @@ steps:
   - script: |
       rush regenerate
       rush modtidy 2>&1
-      git add -A ./test/.
+      git add -A .
       git diff --staged -w 1>&2
     displayName: "Regenerate Autorest Tests"
-    workingDirectory: $(System.DefaultWorkingDirectory)/packages/autorest.go
+    workingDirectory: $(System.DefaultWorkingDirectory)/packages/autorest.go/test
     failOnStderr: true
 
   - script: |
