Update to latest dev TCGC
This fixes an issue with constant header values, so we can remove our
workaround.
Update build script to use local tsp instead of global.

--- a/packages/typespec-go/package.json
+++ b/packages/typespec-go/package.json
@@ -64,12 +64,12 @@
     "@azure-tools/codegen.go": "workspace:*",
     "@azure-tools/naming.go": "workspace:*",
     "@azure-tools/linq": "~3.1.0",
-    "@azure-tools/typespec-azure-core": ">=0.36.0 <1.0.0",
-    "@azure-tools/typespec-client-generator-core": "https://artprodcus3.artifacts.visualstudio.com/A0fb41ef4-5012-48a9-bf39-4ee3de03ee35/29ec6040-b234-4e31-b139-33dc4287b756/_apis/artifact/cGlwZWxpbmVhcnRpZmFjdDovL2F6dXJlLXNkay9wcm9qZWN0SWQvMjllYzYwNDAtYjIzNC00ZTMxLWIxMzktMzNkYzQyODdiNzU2L2J1aWxkSWQvMzM5MjE4OC9hcnRpZmFjdE5hbWUvcGFja2FnZXM1/content?format=file&subPath=%2Fazure-tools-typespec-client-generator-core-0.38.0-pr-6.20240109.4.tgz",
-    "@typespec/compiler": ">=0.50.0 <1.0.0",
-    "@typespec/http": ">=0.50.0 <1.0.0",
-    "@typespec/rest": ">=0.50.0 <1.0.0",
-    "@typespec/versioning": ">=0.50.0 <1.0.0",
+    "@azure-tools/typespec-azure-core": ">=0.37.2 <1.0.0",
+    "@azure-tools/typespec-client-generator-core": "https://artprodcus3.artifacts.visualstudio.com/A0fb41ef4-5012-48a9-bf39-4ee3de03ee35/29ec6040-b234-4e31-b139-33dc4287b756/_apis/artifact/cGlwZWxpbmVhcnRpZmFjdDovL2F6dXJlLXNkay9wcm9qZWN0SWQvMjllYzYwNDAtYjIzNC00ZTMxLWIxMzktMzNkYzQyODdiNzU2L2J1aWxkSWQvMzQxMDI3MS9hcnRpZmFjdE5hbWUvcGFja2FnZXM1/content?format=file&subPath=%2Fazure-tools-typespec-client-generator-core-0.38.0-pr-6.20240116.7.tgz",
+    "@typespec/compiler": ">=0.52.0-dev.14 <1.0.0",
+    "@typespec/http": ">=0.51.0 <1.0.0",
+    "@typespec/rest": ">=0.51.0 <1.0.0",
+    "@typespec/versioning": ">=0.51.0 <1.0.0",
     "js-yaml": "~4.1.0",
     "source-map-support": "0.5.21"
   }
