Add pipeline for publishing cadl-ranch test coverage
Replaced some relative paths with fully qualified ones.
Updated to latest version of Node.

--- a/eng/pipelines/publish-dev-release-go.yml
+++ b/eng/pipelines/publish-dev-release-go.yml
@@ -13,7 +13,7 @@ steps:
   - template: ../steps/build-test-go.yaml
 
   - pwsh: |
-      $currentVersion = node -p -e "require('./packages/autorest.go/package.json').version";
+      $currentVersion = node -p -e "require('$(System.DefaultWorkingDirectory)/packages/autorest.go/package.json').version";
       $currentVersion="$currentVersion-$(Build.BuildNumber)";
       cd packages/autorest.go
       npm version --no-git-tag-version $currentVersion
