--- a/eng/pipelines/publish-dev-release-typespec.yml
+++ b/eng/pipelines/publish-dev-release-typespec.yml
@@ -13,7 +13,7 @@ steps:
   - template: ../steps/build-test-typespec.yaml
 
   - pwsh: |
-      $currentVersion = node -p -e "require('./packages/typespec-go/package.json').version";
+      $currentVersion = node -p -e "require('$(System.DefaultWorkingDirectory)/packages/typespec-go/package.json').version";
       $currentVersion="$currentVersion-$(Build.BuildNumber)";
       cd packages/typespec-go
       npm version --no-git-tag-version $currentVersion
