update test baseline files after rebasing

--- a/packages/autorest.gotest/test/integrationtest/output/agrifood/armagrifood/__debug/go-tester-pre.yaml
+++ b/packages/autorest.gotest/test/integrationtest/output/agrifood/armagrifood/__debug/go-tester-pre.yaml
@@ -12510,6 +12510,7 @@ language:
       - *ref_552
       - *ref_553
       - *ref_554
+    singleClient: false
     sliceElementsByValue: false
 protocol:
   http: {}
