--- a/packages/autorest.gotest/test/integrationtest/output/agrifood/armagrifood/__debug/go-tester.yaml
+++ b/packages/autorest.gotest/test/integrationtest/output/agrifood/armagrifood/__debug/go-tester.yaml
@@ -13952,6 +13952,7 @@ language:
       - *ref_559
       - *ref_560
       - *ref_561
+    singleClient: false
     sliceElementsByValue: false
 protocol:
   http: {}
