--- a/packages/autorest.gotest/test/integrationtest/output/appplatform/armappplatform/__debug/go-tester.yaml
+++ b/packages/autorest.gotest/test/integrationtest/output/appplatform/armappplatform/__debug/go-tester.yaml
@@ -45620,6 +45620,7 @@ language:
       - *ref_1409
       - *ref_1410
       - *ref_1411
+    singleClient: false
     sliceElementsByValue: false
 protocol:
   http: {}
