--- a/packages/autorest.gotest/test/integrationtest/output/signalr/armsignalr/__debug/go-tester-pre.yaml
+++ b/packages/autorest.gotest/test/integrationtest/output/signalr/armsignalr/__debug/go-tester-pre.yaml
@@ -18629,6 +18629,7 @@ language:
       - *ref_632
       - *ref_633
       - *ref_634
+    singleClient: false
     sliceElementsByValue: false
 protocol:
   http: {}
