--- a/packages/autorest.gotest/test/integrationtest/output/signalr/armsignalr/__debug/go-tester.yaml
+++ b/packages/autorest.gotest/test/integrationtest/output/signalr/armsignalr/__debug/go-tester.yaml
@@ -22371,6 +22371,7 @@ language:
       - *ref_639
       - *ref_640
       - *ref_641
+    singleClient: false
     sliceElementsByValue: false
 protocol:
   http: {}
