Add pipeline for publishing cadl-ranch test coverage (#1127)
* Add pipeline for publishing cadl-ranch test coverage

Replaced some relative paths with fully qualified ones.
Updated to latest version of Node.

* remove redundant template parameters

* update test baseline files after rebasing

--- a/eng/pipelines/publish-dev-release-go.yml
+++ b/eng/pipelines/publish-dev-release-go.yml
@@ -6,14 +6,11 @@ pool:
 
 steps:
   - template: ../steps/set-env.yaml
-    parameters:
-      NodeVersion: "18.x"
-      GoVersion: "1.21.4"
 
   - template: ../steps/build-test-go.yaml
 
   - pwsh: |
-      $currentVersion = node -p -e "require('./packages/autorest.go/package.json').version";
+      $currentVersion = node -p -e "require('$(System.DefaultWorkingDirectory)/packages/autorest.go/package.json').version";
       $currentVersion="$currentVersion-$(Build.BuildNumber)";
       cd packages/autorest.go
       npm version --no-git-tag-version $currentVersion
