--- a/packages/autorest.go/package.json
+++ b/packages/autorest.go/package.json
@@ -43,6 +43,11 @@
   },
   "homepage": "https://github.com/Azure/autorest.go#readme",
   "readme": "https://github.com/Azure/autorest.go/blob/main/readme.md",
+  "workspaces": [
+    "../codegen.go/*",
+    "../codemodel.go/*",
+    "../naming.go/*"
+  ],
   "devDependencies": {
     "@types/js-yaml": "~4.0.6",
     "@types/node": "^18.16.3",
@@ -63,8 +68,6 @@
     "@autorest/extension-base": "~3.5.2",
     "@azure-tools/codegen": "~2.9.2",
     "@autorest/codemodel": "~4.19.3",
-    "@azure-tools/codegen.go": "workspace:*",
-    "@azure-tools/naming.go": "workspace:*",
     "@azure-tools/linq": "~3.1.0",
     "@azure-tools/tasks": "~3.0.0",
     "@types/html-to-text": "^5.1.2",
