--- a/eng/pipelines/publish-release-go.yml
+++ b/eng/pipelines/publish-release-go.yml
@@ -15,8 +15,8 @@ steps:
       npm version --no-git-tag-version $currentVersion
       npm pack;
       npm install -g autorest-go-$currentVersion.tgz
-      if (!$?) {
-        exit 1
+      if ($LASTEXITCODE) {
+        exit $LASTEXITCODE
       }
       npx publish-release --token $(azuresdk-github-pat) --repo autorest.go --owner azure --name "Autorest for Go v$currentVersion" --tag v$currentVersion --notes='Autorest for Go track 2' --prerelease --editRelease false --assets autorest-go-$currentVersion.tgz --target_commitish $(Build.SourceBranchName);
     displayName: "Publish GitHub Release"
