Update to the latest autorest.testserver
Previous version no longer builds with recent versions of node.
Updated some tests with expected changes, and added a few new ones.
Include SDK logging when running tests.

--- a/eng/steps/set-env.yaml
+++ b/eng/steps/set-env.yaml
@@ -16,6 +16,6 @@ steps:
   - script: |
       cd $(Build.SourcesDirectory)
       npm install -g "@microsoft/rush"
-      rush update --debug
+      rush update
       npm install -g autorest
     displayName: "Prepare Generator Environment"
