Update to the latest autorest.testserver (#1159)
* Update to the latest autorest.testserver

Previous version no longer builds with recent versions of node.
Updated some tests with expected changes, and added a few new ones.
Include SDK logging when running tests.

* remove logging env var, add timeout instead

--- a/eng/steps/build-test-go.yaml
+++ b/eng/steps/build-test-go.yaml
@@ -112,6 +112,7 @@ steps:
       npm stop
       popd
     displayName: "Run Acceptance Tests"
+    timeoutInMinutes: 10
 
   - pwsh: npm test
     displayName: "Run Unit Tests"
